# GitaGPT-Mentor

./: .gitignore  AGENTS.md  FRONTEND_OVERVIEW.md  RAG_DIAGRAMS_AND_CHEATSHEET.md  RAG_FLOW_FROM_SCRATCH.md  README.md  TODOS.md  startup.sh
.github/: copilot-instructions.md
.github/workflows/: main_gitagpt.yml
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: deps.py  routes_chat.py  routes_health.py
backend/app/core/: config.py  errors.py
backend/app/models/: chat.py
backend/app/rag/: chunker.py  embeddings.py  generator.py  intent_router.py  pdf_loader.py  prompt.py  retriever.py  theme_router.py  vector_store.py
backend/app/services/: auth_service.py  chat_repository.py  chat_service.py  fallback_service.py  memory_builder.py
backend/data/processed/: chunks.jsonl  corpus_report.json
backend/scripts/: ingest.py  inspect_corpus.py
backend/sql/: chat_schema.sql
backend/tests/: test_chunker.py  test_citations.py  test_corpus_report.py  test_generator_formatting.py  test_generator_payload_extraction.py  test_generator_provider_fallback.py  test_intent_emotional_states.py  test_memory_builder.py  test_normalizer.py  test_parser.py
frontend/: eslint.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/public/: manifest.webmanifest  robots.txt  sitemap.xml
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ChatComposer.tsx  ChatShell.tsx  CitationList.tsx  EmptyState.tsx  MessageBubble.tsx  MessageList.tsx  SourceDrawer.tsx  (+2 more)
(+34 files in other folders)
